--- a/kenkenplus/index.html
+++ b/kenkenplus/index.html
@@ -3,22 +3,27 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0 user-scalable=no">
         <title>KenKenPlus</title>
-
-        <link rel="stylesheet" href="kenken.css">
-        <script src="kenken.js"></script>
+        <link rel="stylesheet" href="index.css">
     </head>
 
     <body>
-        <h1>KenKenPlus</h1>
+        <h1>KenKen+</h1>
         <hr>
-
-        <div id="board"></div>
+        
+        <label for="size">Size (3-12):</label>
+        <input type="number" id="size" name="size" min="3" max="12">
         <br>
-        <div id="digits">
-        </div>
-        <div id="buttons">
-        </div>
+        <label for="size">Difficulty (0-2):</label>
+        <input type="number" id="diff" name="diff" min="0" max="2">
 
+        <br>
+        <button onclick="proceed()" class = "button">Start</button>
+
+        <script>
+            function proceed() {
+                location.href = "kenken.html?" + document.getElementById("size").value + "|" + document.getElementById("diff").value;
+            }
+        </script>
     </body>
 
 
