--- a/kenkenplus/kenken.html
+++ b/kenkenplus/kenken.html
@@ -9,7 +9,8 @@
     </head>
 
     <body>
-        <h1>KenKen+</h1>
+        <div id = title><h1>KenKen+</h1></div>
+        
         <hr>
 
         <div id="board"></div>
