--- a/kenkenplus/kenken.html
+++ b/kenkenplus/kenken.html
@@ -5,7 +5,7 @@
         <title>KenKenPlus</title>
 
         <link rel="stylesheet" href="kenken.css">
-        <script src="kenken.js"></script>
+        <script src="scripts/kenken.js"></script>
     </head>
 
     <body>
