Add better win message

--- a/kenkenplus/kenken.html
+++ b/kenkenplus/kenken.html
@@ -17,8 +17,7 @@
         <br>
         <div id="digits">
         </div>
-        <div id="buttons">
-        </div>
+        <div id="buttons"></div>
 
     </body>
 
