Added solving algorithm. Made puzzles have only one solution.

--- a/kenkenplus/index.html
+++ b/kenkenplus/index.html
@@ -2,12 +2,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0 user-scalable=no">
-        <title>KenKenPlus</title>
+        <title>BrainTeaser</title>
         <link rel="stylesheet" href="index.css">
     </head>
 
     <body>
-        <h1>KenKen+</h1>
+        <h1>Welcome!</h1>
         <hr>
         
         <label for="size">Size (3-12):</label>
