--- a/kenkenplus/kenken.html
+++ b/kenkenplus/kenken.html
@@ -9,7 +9,13 @@
     </head>
 
     <body>
-        <div id = title><h1>KenKen+</h1></div>
+        <div id = title>
+            <span class="digit" id="min"> 
+                00</span> 
+            <span class="txt">:</span> 
+            <span class="digit" id="sec"> 
+                00</span> 
+        </div>
         
         <hr>
 
