--- a/puzzler/index.html
+++ b/puzzler/index.html
@@ -21,7 +21,7 @@
 
         <script>
             function proceed() {
-                location.href = "kenken.html?" + document.getElementById("size").value + "|" + document.getElementById("diff").value;
+                location.href = "puzzle.html?" + document.getElementById("size").value + "|" + document.getElementById("diff").value;
             }
         </script>
     </body>
