--- a/puzzler/puzzle.html
+++ b/puzzler/puzzle.html
@@ -24,6 +24,19 @@
         <div id="digits">
         </div>
         <div id="buttons"></div>
+        <div id="Instructions" style="text-align: center;">
+            <div style = "display:inline-block; text-align: left;">
+                <h3> </h3>
+                <b>N</b>: Take notes <br>
+                <b>D</b>: Delete <br>
+                <b>+/-</b> Add/remove all notes <br>
+                <b>Space</b>: Reset buttons <br>
+                <b>Enter</b>: Submit puzzle <br>
+                <b>&#x1F525 &#x1F525</b>: Super fast <br>
+                <b>&#x1F525</b>: Fast
+            </div>
+            
+        </div>
     </body>
 
 
