Added reset button

--- a/puzzler/puzzle.html
+++ b/puzzler/puzzle.html
@@ -33,7 +33,8 @@
                 <b>Space</b>: Reset buttons <br>
                 <b>Enter</b>: Submit puzzle <br>
                 <b>&#x1F525 &#x1F525</b>: Super fast <br>
-                <b>&#x1F525</b>: Fast
+                <b>&#x1F525</b>: Fast <br>
+                <b>&#x1F422</b>: Slow
             </div>
             
         </div>
