Changed space to shift

--- a/puzzler/puzzle.html
+++ b/puzzler/puzzle.html
@@ -29,7 +29,7 @@
                 <h3> </h3>
                 <b>N</b>: Take notes <br>
                 <b>D</b>: Delete <br>
-                <b>Space</b>: Reset buttons <br>
+                <b>Shift</b>: Reset buttons <br>
                 <b>Enter</b>: Submit puzzle <br>
                 <b>&#x1F525 &#x1F525</b>: Super fast <br>
                 <b>&#x1F525</b>: Fast <br>
