Lock buttons after win

--- a/puzzler/puzzle.html
+++ b/puzzler/puzzle.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0 user-scalable=no">
-        <title>KenKenPlus</title>
+        <title>Puzzler</title>
 
         <link rel="stylesheet" href="kenken.css">
         <script type="module" src="scripts/kenken.mjs"></script>
@@ -29,6 +29,7 @@
                 <h3> </h3>
                 <b>N</b>: Take notes <br>
                 <b>D</b>: Delete <br>
+                <b>U</b>: Undo <br>
                 <b>Shift</b>: Reset buttons <br>
                 <b>Enter</b>: Submit puzzle <br>
                 <b>&#x1F525 &#x1F525</b>: Super fast <br>
