added master plus

--- a/puzzler/puzzle.html
+++ b/puzzler/puzzle.html
@@ -30,6 +30,7 @@
                 <b>N</b>: Take notes <br>
                 <b>D</b>: Delete <br>
                 <b>U</b>: Undo <br>
+                <b>P</b>: Master plus <br>
                 <b>Shift</b>: Reset buttons <br>
                 <b>Enter</b>: Submit puzzle <br>
                 <b>&#x1F525 &#x1F525</b>: Super fast <br>
