--- a/puzzler/index.html
+++ b/puzzler/index.html
@@ -64,8 +64,8 @@
                 d.innerHTML += "<b>Division (/):</b> The larger number in the cell divided by the smaller number in the cell equals the desired amount (e.g. 2/ => [4,2] or [2,1] in a 4x4)<br>"
                 d.innerHTML += "<h4>Special Operations/Modifications (optional)<h4>"
                 d.innerHTML += "<b>Modulo (%):</b> The <u>remainder</u> when the larger number is divided by the smaller number is the desired amount (e.g. 1% => [4,3] or [3,2] in a 4x4)<br>"
-                d.innerHTML += "Greatest Common Divisor (gcd):</b> The largest number that divides all numbers in the cell (e.g. gcd2 => [2,4,6], etc. in a 6x6 puzzle)<br>"
-                d.innerHTML += "Least Common Multiple (lcm):</b> The smallest number that is divisible by all numbers in the cell (e.g. lcm6 => [1,6], [2,6], [2,3], etc. in a 6x6)"
+                d.innerHTML += "<b>Greatest Common Divisor (gcd):</b> The largest number that divides all numbers in the cell (e.g. gcd2 => [2,4,6], etc. in a 6x6 puzzle)<br>"
+                d.innerHTML += "<b>Least Common Multiple (lcm):</b> The smallest number that is divisible by all numbers in the cell (e.g. lcm6 => [1,6], [2,6], [2,3], etc. in a 6x6)"
                 document.getElementById("bottom").append(d);
                 document.getElementById("inst").onclick = "rem()";
                 document.getElementById("inst").innerText = "Clear";
