--- a/puzzler/index.html
+++ b/puzzler/index.html
@@ -11,10 +11,10 @@
         <hr>
         
         <label for="size">Size (3-12):</label>
-        <input type="number" id="size" name="size" min="3" max="12">
+        <input type="number" id="size" name="size" min="3" max="12" value="6">
         <br>
         <label for="size">Difficulty (0-2):</label>
-        <input type="number" id="diff" name="diff" min="0" max="2">
+        <input type="number" id="diff" name="diff" min="0" max="2" value="0">
         <br>
         <label for="m">Modulo</label>
         <input type="checkbox" id="mod" name="mod">
@@ -24,6 +24,9 @@
         <br>
         <label for="l">LCM</label>
         <input type="checkbox" id="lcm" name="lcm">
+        <br>
+        <label for="z">Zero</label>
+        <input type="checkbox" id="zero" name="zero">
         <br>
         <button onclick="proceed()" class = "button">Start</button>
         <br>
@@ -50,6 +53,11 @@
                 } else {
                     s += "|0"
                 }
+                if (document.getElementById("zero").checked) {
+                    s += "|1"
+                } else {
+                    s += "|0"
+                }
                 location.href = s;
             }
             function display() {
@@ -65,7 +73,8 @@
                 d.innerHTML += "<h4>Special Operations/Modifications (optional)<h4>"
                 d.innerHTML += "<b>Modulo (%):</b> The <u>remainder</u> when the larger number is divided by the smaller number is the desired amount (e.g. 1% => [4,3] or [3,2] in a 4x4)<br>"
                 d.innerHTML += "<b>Greatest Common Divisor (gcd):</b> The largest number that divides all numbers in the cell (e.g. gcd2 => [2,4,6], etc. in a 6x6 puzzle)<br>"
-                d.innerHTML += "<b>Least Common Multiple (lcm):</b> The smallest number that is divisible by all numbers in the cell (e.g. lcm6 => [1,6], [2,6], [2,3], etc. in a 6x6)"
+                d.innerHTML += "<b>Least Common Multiple (lcm):</b> The smallest number that is divisible by all numbers in the cell (e.g. lcm6 => [1,6], [2,6], [2,3], etc. in a 6x6)<br>"
+                d.innerHTML += "<b>Zero:</b> Puzzle will include numbers from 0 -> N-1. Modulo, GCD, LCM, and Division clues will not include zero (e.g. 6+ [6,0], [1,5], etc. in a 7x7)"
                 document.getElementById("bottom").append(d);
                 document.getElementById("inst").onclick = "rem()";
                 document.getElementById("inst").innerText = "Clear";
