--- a/puzzler/puzzle.html
+++ b/puzzler/puzzle.html
@@ -7,6 +7,15 @@
         <link rel="stylesheet" href="kenken.css">
         <script type="module" src="scripts/kenken.mjs"></script>
     </head>
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-78B3CE9ZLV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-78B3CE9ZLV');
+    </script>
 
     <body>
         <div id = title>
