--- a/puzzler/puzzle.html
+++ b/puzzler/puzzle.html
@@ -30,6 +30,7 @@
 
         <div id="board"></div>
         <br>
+        <div id="solving"></div>
         <div id="digits">
         </div>
         <div id="buttons"></div>
