Added master minus

--- a/puzzler/puzzle.html
+++ b/puzzler/puzzle.html
@@ -40,7 +40,8 @@
                 <b>N</b>: Take notes <br>
                 <b>D</b>: Delete <br>
                 <b>U</b>: Undo <br>
-                <b>P</b>: Master plus <br>
+                <b>P</b>: Add all notes <br>
+                <b>M</b>: Remove all notes <br>
                 <b>Shift</b>: Reset buttons <br>
                 <b>Enter</b>: Submit puzzle <br>
                 <b>&#x1F525 &#x1F525</b>: Super fast <br>
