Changes to home page, plus renaming

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <div id="nav">
     	<ul>
       	<li><a href="index.html">Home</a></li>
-            <li><a href="page1.html">Projects</a></li>
+            <li><a href="aboutme.html">About me</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="page2.html">Resume</a></li>
         </ul>
     </div>
@@ -41,15 +42,19 @@
                 </a>
               </div>
               <div class="column">
-                <a href="https://www.linkedin.com/in/campbellbjoseph/">
+                <a href="https://www.linkedin.com/in/campbellbjoseph/" class="center">
                   <img src="images/linkedin.png" title="linked" id="linked" width="30" height="30"/>
                 </a>
               </div>
             </div>
         	</div>
         
-			<p></p>
-
+			<h3>Hi there!</h3>
+      <p>I am a third-year undergrad student at Georgia Tech majoring in Computer Science and Mathematics. I am currently looking
+        for open positions in these fields for Summer '24, so if you are interested in my skills, please check out my <a href="page2.html">resume</a>. <br>
+        The best place to contact me is at my school email: <i>jcampbell339 [at] gatech.edu</i>.
+      </p>
+      
         </div>
 	</div>
     </div>
