--- a/puzzler/puzzle.html
+++ b/puzzler/puzzle.html
@@ -2,10 +2,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0 user-scalable=no">
-        <title>Puzzler</title>
+        <title>Puzzle</title>
 
-        <link rel="stylesheet" href="kenken.css">
-        <script type="module" src="scripts/kenken.mjs"></script>
+        <link rel="stylesheet" href="calcudoku.css">
+        <script type="module" src="scripts/calcudoku.mjs"></script>
     </head>
         <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-78B3CE9ZLV"></script>
