--- a/puzzler/index.html
+++ b/puzzler/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0 user-scalable=no">
-        <title>BrainTeaser</title>
+        <title>Calcudoku</title>
         <link rel="stylesheet" href="index.css">
     </head>
     <!-- Google tag (gtag.js) -->
@@ -15,7 +15,7 @@
       gtag('config', 'G-78B3CE9ZLV');
     </script>
     <body>
-        <h1>Welcome!</h1>
+        <h1>Welcome to Calcudoku!</h1>
         <hr>
         
         <label for="size">Size (3-12):</label>
