--- a/projects.html
+++ b/projects.html
@@ -29,14 +29,14 @@
                 
                 <div id="content">
                     <h2>My Projects</h2>
-                    <h3><a href="/puzzler/index.html">Calcudoku</a></h3>
-                    Calcudoku, or KenKen® or Kendoku®, are mathematical puzzle games that are similar to Sudoku®. The objective is to 
+                    <h3><a href="/puzzler/index.html">SuperCalc</a></h3>
+                    SuperCalc, or KenKen® or Kendoku®, are mathematical puzzle games that are similar to Sudoku®. The objective is to 
                     fill out a N by N <a href="https://en.wikipedia.org/wiki/Latin_square">Latin square</a> while still adhering to the clues
                     provided. Here is an example puzzle: <br>   
                     <img src="images/ezken.png" title="ken" id="ken" width="300" height="300" class="center"/>
-                    These puzzles are addictingly fun, and I decided to implement my own version of Calcudoku, both as an exercise in development
+                    These puzzles are addictingly fun, and I decided to implement my own version of KenKen®, both as an exercise in development
                     but also to add my own advanced features, such as more complex mathematical operations, the use of the numbers 0 to N-1 instead of 1 to N,
-                    and even hidden clues. If you are interested in playing an interactive Calcudoku puzzle, <a href="/puzzler/index.html">click here.</a>
+                    and even hidden clues. If you are interested in playing an interactive SuperCalc puzzle, <a href="/puzzler/index.html">click here.</a>
                     <h3><a href="https://github.com/katsukixyz/hackgt-9">Weather or not!</a></h3>
                     <h3><a href="https://siddhantdubey.github.io/cs4641project/finalreport">Music Genre Classifier with Machine Learning</a></h3>
                 </div>
