--- a/puzzler/puzzle.html
+++ b/puzzler/puzzle.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width initial-scale=1.0 user-scalable=no">
-        <title>Puzzle</title>
+        <title>SuperCalc</title>
 
         <link rel="stylesheet" href="calcudoku.css">
         <script type="module" src="scripts/calcudoku.mjs"></script>
