Added save state and new game button

--- a/puzzler/puzzle.html
+++ b/puzzler/puzzle.html
@@ -40,6 +40,8 @@
                 <b>N</b>: Take notes <br>
                 <b>D</b>: Delete <br>
                 <b>U</b>: Undo <br>
+                <b>S</b>: Save current state <br>
+                <b>R</b>: Return to saved state <br>
                 <b>P</b>: Add all notes <br>
                 <b>M</b>: Remove all notes <br>
                 <b>Shift</b>: Reset buttons <br>
