Added unique puzzle ID functionality

--- a/aboutme.html
+++ b/aboutme.html
@@ -36,8 +36,18 @@
                         competitions like the NC state math contest and the Duke math meet, and I've achieved great success at the national level (5x AIME with
                         a top score of 10, 4x NC ARML team, top 500 Putnam, USACO Gold, etc.) <br> <br>
                         However, upon attending the NC School of Science and Mathematics, one of the biggest changes that occurred was my discovery of mathematical
-                        modeling. 
+                        modeling through one of my elective classes. In this course, I had the opportunity to participate in the high school mathematical contest in modeling (HiMCM)
+                        and the internation MCM. Not only did my teams for these two contests perform very well (Finalist and Honorable Mention respectively), but I also 
+                        discovered a new passion for using my computational skills to solve discrete and continuous problems. Since that time, I have continued to compete
+                        in similar competitions, but have also taken every available opportunity to solve similar problems. For instance, at Georgia Tech, I have had the opportunity
+                        to work on the multidisciplinary Extreme Events Engineering team, where we use existing data and machine learning techniques to model environmental disasters
+                        (such as earthquakes and tsunamis) and their effects on human infrastructure.
                       </p>
+                    <h3>Extracurriculars</h3>
+                    <p>
+                        Outside of school, I have a number of different interests and hobbies. I enjoy playing a number of different intramural sports at
+                        GT, including soccer, indoor soccer, tennis, pickleball, volleyball, badminton and many more. 
+                    </p>
                 </div>
             </div>
             </div>
