Cleaning up page

--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@
                   <li><a href="index.html">Home</a></li>
                     <li><a href="aboutme.html">About me</a></li>
                     <li><a href="projects.html">Projects</a></li>
-                    <li><a href="page2.html">Resume</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                 </ul>
             </div>
             <div id="page">
@@ -46,7 +46,8 @@
                     <h3>Extracurriculars</h3>
                     <p>
                         Outside of school, I have a number of different interests and hobbies. I enjoy playing a number of different intramural sports at
-                        GT, including soccer, indoor soccer, tennis, pickleball, volleyball, badminton and many more. 
+                        GT, including soccer, indoor soccer, tennis, pickleball, volleyball, badminton and many more. I also enjoy some more "extreme" sports if you can call them
+                        that, including Brazilian Jiu Jitsu, whitewater kayaking, and rock climbing. In my spare time, I enjoy hiking and working with plants or in a garden.
                     </p>
                 </div>
             </div>
