--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Joseph Campbell</title>
+<title>Projects</title>
 <link href="defaultstyles.css" rel="stylesheet" media="screen" />
 <script type="text/javascript" src="branding.js"></script>
 <script type="text/JavaScript" src="http://www.colorado.edu/templates/faculty-template/js/curvycorners.js"></script>
@@ -22,7 +22,7 @@
                   <li><a href="index.html">Home</a></li>
                     <li><a href="aboutme.html">About me</a></li>
                     <li><a href="projects.html">Projects</a></li>
-                    <li><a href="page2.html">Resume</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                 </ul>
             </div>
             <div id="page">
@@ -38,7 +38,17 @@
                     but also to add my own advanced features, such as more complex mathematical operations, the use of the numbers 0 to N-1 instead of 1 to N,
                     and even hidden clues. If you are interested in playing an interactive SuperCalc puzzle, <a href="/puzzler/index.html">click here.</a>
                     <h3><a href="https://github.com/katsukixyz/hackgt-9">Weather or not!</a></h3>
+                    Weather or not is a browser extension that myself and three of my friends development during the 2022 GT Hackathon. The idea is to integrate 
+                    a weather service into Google Calendar, which can tell you the weather at a given events location. <br>
+                    This extension has not been published yet as it is in active development. The objective is to implement daily notifications that will inform you 
+                    if any of your events will have inclement weather. However, if you are interested in installing the current version, check out our
+                    <a href="https://github.com/katsukixyz/hackgt-9">Github page</a> for details and instructions.
                     <h3><a href="https://siddhantdubey.github.io/cs4641project/finalreport">Music Genre Classifier with Machine Learning</a></h3>
+                    This was my teams final project for CS4641 Machine Learning in Fall 2023. We analyzed 1700 spectrograms of English songs between 270 and 300 seconds in length
+                    across 16 distinct genres. We utilized five different machine learning algorithms to examine our dataset: KMeans, SVM, Random Forest, Logistic Regression, and Convolutional NN.
+                    As we anticipated, our CNN performed the best, with an accuracy of over 70% on the test data. Additionally, we noted that all models performed well at distinguishing different types of classical 
+                    music (excluding symphony and chamber), but most models experienced confusion between the R&B, Rock, and Indie genres, likely due to mitual inspiration from artists in those genres and also due
+                    to limitations in our dataset. Overall, we were happy with the performance of our models, and our final report can be seen <a href="https://siddhantdubey.github.io/cs4641project/finalreport">here</a>.
                 </div>
             </div>
             </div>
