--- a/puzzler/index.html
+++ b/puzzler/index.html
@@ -16,6 +16,7 @@
     </script>
     <body>
         <h1>Welcome to SuperCalc!</h1>
+        <a href="../index.html">Return to home page</a>
         <hr>
         <label for="uid">Paste unique puzzle ID: </label>
         <input type="text" id="unique_id" style="width: auto">
