--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       	<li><a href="index.html">Home</a></li>
             <li><a href="aboutme.html">About me</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="page2.html">Resume</a></li>
+            <li><a href="resume.html">Resume</a></li>
         </ul>
     </div>
     <div id="page">
@@ -51,7 +51,7 @@
         
 			<h3>Hi there!</h3>
       <p>I am a third-year undergrad student at Georgia Tech majoring in Computer Science and Mathematics. I am currently looking
-        for open positions in these fields for Summer '24, so if you are interested in my skills, please check out my <a href="page2.html">resume</a>. <br>
+        for open positions in these fields for Summer '24, so if you are interested in my skills, please check out my <a href="resume.html">resume</a>. <br>
         The best place to contact me is at my school email: <i>jcampbell339 [at] gatech.edu</i>.
       </p>
       
