--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<h3>Hi there!</h3>
       <p>I am a third-year undergrad student at Georgia Tech majoring in Computer Science and Mathematics. I am currently looking
         for open positions in these fields for Summer '24, so if you are interested in my skills, please check out my <a href="resume.html">resume</a>. <br>
-        The best place to contact me is at my school email: <i>jcampbell339 [at] gatech.edu</i>.
+        The best place to contact me is at my school email: <i>jcampbell339@gatech.edu</i>
       </p>
       
         </div>
