Clean up and adding images

--- a/projects.html
+++ b/projects.html
@@ -29,16 +29,19 @@
                 
                 <div id="content">
                     <h2>My Projects</h2>
+                    <h3><a href="https://campbellbjoseph.com/scheduling">Rally Ready!</a></h3>
+                    Rally Ready! is a tool that I developed to help organize round robin tournaments. It allows you to upload an Excel file with player names and then generates a schedule for the tournament.
+                    The schedule is generated using a deterministic mathematical algorithm that ensures players have a fair number of matches and play with as many different opponents as possible.
                     <h3><a href="/puzzler/index.html">SuperCalc</a></h3>
                     SuperCalc, or KenKen® or Kendoku®, are mathematical puzzle games that are similar to Sudoku®. The objective is to 
                     fill out a N by N <a href="https://en.wikipedia.org/wiki/Latin_square">Latin square</a> while still adhering to the clues
                     provided. Here is an example puzzle: <br>   
-                    <img src="images/ezken.png" title="ken" id="ken" width="300" height="300" class="center"/>
+                    <img src="images/ezken.png" title="ken" id="ken" width="250" height="250" class="center"/>
                     These puzzles are addictingly fun, and I decided to implement my own version of KenKen®, both as an exercise in development
                     but also to add my own advanced features, such as more complex mathematical operations, the use of the numbers 0 to N-1 instead of 1 to N,
                     and even hidden clues. If you are interested in playing an interactive SuperCalc puzzle, <a href="/puzzler/index.html">click here.</a>
                     <h3><a href="https://github.com/katsukixyz/hackgt-9">Weather or not!</a></h3>
-                    Weather or not is a browser extension that myself and three of my friends development during the 2022 GT Hackathon. The idea is to integrate 
+                    Weather or not is a browser extension that three of my friends and I developed during the 2022 GT Hackathon. The idea is to integrate 
                     a weather service into Google Calendar, which can tell you the weather at a given events location. <br>
                     This extension has not been published yet as it is in active development. The objective is to implement daily notifications that will inform you 
                     if any of your events will have inclement weather. However, if you are interested in installing the current version, check out our
