--- a/puzzler/puzzle.html
+++ b/puzzler/puzzle.html
@@ -78,6 +78,7 @@
 
             function myFunction() {
                 let uid = document.getElementById("uid");
+                console.log(uid.value);
                 //uid.select(); 
                 //uid.setSelectionRange(0, 99999);
                 navigator.clipboard.writeText(uid.value);
